--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Memory Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="clearfix">
         <a href="#instructions">Instructions</a>
@@ -12,11 +14,14 @@
     </nav>
     <h1>Memory Game.</h1>
     <h2 id="instructions">Instructions.</h2>
-    <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+    <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game
+        in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object
+        of the game is to turn over pairs of matching cards.</p>
     <hr>
     <div class="board" id="game-board">
     </div>
     <footer>Created with ♥ by <span class="name">GA</span></footer>
-<script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
