--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,8 +21,10 @@
 
   <hr>
 
-  <div class="board" id="game-board">
-  </div>
+  <input id="number" type="text" placeholder="Number of cards">
+  <input id="start" type="button" value="Start Game" onclick="checkInput();">
+
+  <div class="board" id="game-board"></div>
 
   <footer>Created with ♥ by <span class="name">GA</span></footer>
 
