Animations, Refactoring, Fixed footer.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,11 +21,11 @@
       <h3>ABOUT ↓</h3>
       <div class="light-break"></div>
     </header>
-    <p>Created for General Assembly's WDI Fundamentals class. To play: Enter the number of pairs to play with in the box above then press 'Begin'. Click a card to reveal an image or description. Match all images to their descriptions to win!</p>
+    <p class="about">Created for General Assembly's WDI Fundamentals class. To play: Enter the number of pairs to play with in the box above then press 'Begin'. Click a card to reveal an image or description. Match all images to their descriptions to win!</p>
     <div id="win" class="banner">You Win!</div>
     <div class="game-board"></div>
-    <footer>Created with ❤ by <span class="ga">GA</span></footer>
   </div>
+  <footer>Created with ❤ by <span class="ga">GA</span></footer>
   <script src="main.js"></script>
 </body>
 
